<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#900c3f"
    tools:context=".ConsumoDeCombustible_Activity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/ingresoCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/ingrese_numero_frecuecia"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/convertirACC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertir_de"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <Spinner
        android:id="@+id/spinnerConvertirDeCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/convertirDeCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertir_a"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />
    <Spinner
        android:id="@+id/spinnerConvertirACC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#131313"
        android:layout_marginTop="20dp"
        android:textColor="#F9F8FB"
        android:onClick="Calcular"
        android:text="@string/convertir"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginTop="30dp"
        android:id="@+id/mostrarResultadoCC"
        android:textSize="50sp"
        android:hint="@string/resultado"
        android:textColor="#000000"
        android:layout_gravity="center"
        />
</LinearLayout>