<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c70039"
    tools:context=".Frecuencia_Activity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/ingresoET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/ingrese_numero_frecuecia"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/convertirDeFrecuencia"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/convertir_de"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <Spinner
        android:id="@+id/spinnerConvertiDeFrecuencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/convertirAFrecuencia"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/convertir_a"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <Spinner
        android:id="@+id/spinnerConvertirAFrecuencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#111112"
        android:textColor="#EEEDF1"
        android:onClick="calcularFrecuencia"
        android:text="@string/convertir"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:textColor="#F1F0F3"
        android:hint="@string/resultado"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="50sp"
        />

</LinearLayout>